# rust-score-tracker

./: .gitignore  Cargo.toml  config.json  fail2ban.local.conf  package.json  pkgx.yaml  pnpm-lock.yaml  podman-rust-score-tracker.service  readme.md  release.config.json  release.dockerfile  tailwind.config.js
pages/: index.html
src/: data.rs  main.rs  routes.rs
