[package]
name = "rust-score-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.6", features = ["tls-rustls"] }
minijinja = { version = "2.0.1", features = ["builtins"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
